Agrega texto de Ayuda en pantallas...continuacion.

--- a/src/escuela/templates/asistencias-form.html
+++ b/src/escuela/templates/asistencias-form.html
@@ -72,7 +72,7 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-   <p style="text-align: center;"><br /><span style="font-size: 14pt;"><strong>Nueva Asistencia</strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nueva Asistencia</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
         <p><span style="color: #003366;"><strong>Debe elegir el Grupo para tomar asistencia de los alumnos.</strong></span></p>
