--- a/src/escuela/templates/inscripciones-bajas.html
+++ b/src/escuela/templates/inscripciones-bajas.html
@@ -107,7 +107,7 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-   <p style="text-align: center;"><br /><span style="font-size: 14pt;"><strong>Baja de Inscripciones</strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Baja de Inscripciones</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
         <p><span style="color: #003366;"><strong>Se visualiza el listado de todo los alumnos activos:</strong></span></p>
