--- a/src/escuela/templates/inscripciones-form.html
+++ b/src/escuela/templates/inscripciones-form.html
@@ -143,7 +143,7 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-   <p style="text-align: center;"><br /><span style="font-size: 14pt;"><strong>Proceso de Inscripci&oacute;n</strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Proceso de Inscripci&oacute;n</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
         <p style="text-align: center;">Para llevar a cabo una inscripci&oacute;n es necesario que se encuentre creado un <strong>Grupo de Clases</strong>  y &eacute;stos tengan cupos disponibles. Siga los siguientes pasos:&nbsp;</p>
