--- a/src/escuela/templates/inscripciones.html
+++ b/src/escuela/templates/inscripciones.html
@@ -103,7 +103,7 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-   <p style="text-align: center;"><br /><span style="font-size: 14pt;"><strong>Lista de Inscripciones</strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Lista de Inscripciones</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
     <p style="text-align: center;">Muestra el listado de los alumnos inscriptos esten <strong>Activos ("A") o Inactivos ("I")</strong> </strong>&nbsp;</p>
