--- a/src/main/templates/main/profesores-form.html
+++ b/src/main/templates/main/profesores-form.html
@@ -51,7 +51,7 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-   <p style="text-align: center;"><br /><span style="font-size: 14pt;"><strong>Nuevo Profesores</strong></span></p>
+   <p style="text-align: center;"><br /><span style="font-size: 16pt;"><span style="color: #003366;"><strong>Nuevo Profesor</strong></span></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
 <p style="text-align: center;">Podr&aacute; visualizar a todos los <strong>Profesores</strong> exitentes, ademas de agregar nuevos. Siga los siguientes pasos:&nbsp;</p>
@@ -63,12 +63,12 @@
         <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong></em> Fotocopia de C&eacute;dula</p>
         <p>&bull;<strong> Guardar.</strong></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Profesor :</strong></span></p>
+        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Profesor : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
         <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Profesor:</strong></span></p>
+        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Profesor : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
         <p>&bull; <strong><em>El registro del profesor sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Profesor:</strong></span></p>
-        <p>&bull; <strong><em>Podemos buscar el resgistro del alumno sea por nombre, apellido u otro campo.  <img src="/static/img/busqueda.png" alt="busqueda" /></em></strong></p>
+        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Profesor : <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+        <p>&bull; <strong><em>Podemos buscar el resgistro del alumno sea por nombre, apellido u otro campo.</em></strong></p>
 {% endblock %}
