--- a/src/escuela/templates/grupos-form.html
+++ b/src/escuela/templates/grupos-form.html
@@ -33,7 +33,7 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-   <p style="text-align: center;"><br /><span style="font-size: 14pt;"><strong>Nuevo Grupo</strong></span></p>
+   <p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nuevo Grupo</span></p>
 {% endblock %}
 {% block ayuda_contenido %}
 <p style="text-align: center;">Para agregar un grupo es necesario que se encuentre creada una <strong>Clase</strong>. Siga los siguientes pasos:&nbsp;</p>
@@ -44,10 +44,10 @@
         <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong> </em>Dias.</p>
         <p>&bull;<strong> Guardar.</strong></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Grupo :</strong></span></p>
+        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Grupo : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
         <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Grupo:</strong></span></p>
+        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Grupo : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
         <p>&bull; <strong><em>El registro ser&aacute; eliminado de forma <strong>permanente</strong>.</em></strong></p>
 
         <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Grupo:</strong></span></p>
