--- a/src/main/templates/main/alumnos.html
+++ b/src/main/templates/main/alumnos.html
@@ -115,7 +115,7 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-   <p style="text-align: center;"><br /><span style="font-size: 14pt;"><strong>Nuevo Alumnos</strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nuevo Alumno</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
 <p style="text-align: center;">Podr&aacute; visualizar a todos los <strong>Alumnos</strong> exitentes, ademas de agregar nuevos. Siga los siguientes pasos:&nbsp;</p>
@@ -124,14 +124,14 @@
         <p><span style="color: #003366;"><strong>Opcion 1. Nuevo alumno :&nbsp;Ingrese el numero de c&eacute;dula y presione Enter.</strong></span></p>
         <p>&bull; <em><strong>Complete de manera obligatoria los siguientes campos:</strong></em>C&eacute;dula, Nombre y Apellido, Sexo, Direcci&oacute;n, Estado</p>
         <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong></em> Tel&eacute;fono, Otro contacto, Fotocopia de C&eacute;dula, Tipo Responsable</p>
-        <p>&bull;<strong> Guardar.</strong></p>
+        <p>&bull;<strong><em> Y podemos guardar el registro <img src="/static/img/guardar.png" alt="guardar" /></em></strong></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Alumno :</strong></span></p>
+        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Alumno : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
         <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar alumno:</strong></span></p>
+        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar alumno : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
         <p>&bull; <strong><em>El registro del alumno sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar alumno:</strong></span></p>
-        <p>&bull; <strong><em>Podemos buscar el resgistro del alumno sea por nombre, apellido u otro campo.  <img src="/static/img/busqueda.png" alt="busqueda" /></em></strong></p>
+        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar alumno : <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+        <p>&bull; <strong><em>Podemos buscar el resgistro del alumno sea por nombre, apellido u otro campo.</em></strong></p>
 {% endblock %}
