--- a/src/tienda/templates/facturas.html
+++ b/src/tienda/templates/facturas.html
@@ -38,12 +38,12 @@
                                 <th>Dirección</th>
                                 <th>Teléfono</th>
                                 <th>Numero timbrado</th>
-                                <th>punto_emision</th>
-                                <th>nro_inicial</th>
-                                <th>nro_final</th>
-                                <th>vigencia_desde</th>
-                                <th>vigencia_hasta</th>
-                                <th>estado</th>
+                                <th>Punto_emision</th>
+                                <th>Nro_inicial</th>
+                                <th>Nro_final</th>
+                                <th>Vigencia_desde</th>
+                                <th>Vigencia_hasta</th>
+                                <th>Estado</th>
                                 <th>Acción</th>
                             </tr>
                             </thead>
@@ -113,4 +113,31 @@
             $('#eliminar-form').attr('action', '/tienda/facturas/' + id + '/delete' );
         }
     </script>
+{% endblock %}
+
+{#AYUDA#}
+{% block ayuda_titulo %}
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Ayuda para agregar Talonario de Factura</span></strong></span></p>
+{% endblock %}
+{% block ayuda_contenido %}
+        <p style="text-align: center;">Se listan los talonarios vigentes y vencidos, puede agregar un nuevo <strong>Talonario vigente</strong>. Siga los siguientes pasos:&nbsp;</p>
+            <p style="text-align: center;">&nbsp;</p>
+
+        <p><span style="color: #003366;"><strong> Nueva Factura : <img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></span></p>
+        <p>&bull; <strong><em> Complete de manera obligatoria los siguientes campos:
+        </em></strong>
+        <table><ol><li> Nombre
+        <br></br><li>RUC
+        <br></br><li>Actividad Economica
+        <br></br><li>Direcci&oacute;n
+        <br></br><li>Tel&eacute;fono
+        <br></br><li>Numero de timbrado : debe ser de 13 digitos <strong>001-001-0000001</strong>
+        <br></br><li>Punto de Emisi&oacute;n : si la escuela tiene sucursales este numero variar&aacute; <strong>001-001</strong>
+        <br></br><li>Nro inicial : los primero numeros que van luego de los primeros 6 digitos  <strong>0000001</strong>
+        <br></br><li>Nro final : los ultimos numeros que van luego de los primeros 6 digitos <strong>9999999</strong>
+        <br></br><li>Vigencia desde: esta vigencia es otorgada por el SET.
+        <br></br><li>Vigencia hasta: esta vigencia es otorgada por el SET.
+        <br></br><li>Estado
+        </ol></table></p>
+        <p>&bull;<strong><em> Y podemos guardar el talonario <img src="/static/img/guardar.png" alt="guardar" /></em></strong></p>
 {% endblock %}
