--- a/src/tienda/templates/producto.html
+++ b/src/tienda/templates/producto.html
@@ -119,3 +119,28 @@
     </script>
 {% endblock %}>
 
+{#AYUDA#}
+{% block ayuda_titulo %}
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Ayuda para agregar Producto</span></strong></span></p>
+{% endblock %}
+{% block ayuda_contenido %}
+        <p style="text-align: center;">Se listan los productos y se puede agregar nuevos. Siga los siguientes pasos:&nbsp;</p>
+            <p style="text-align: center;">&nbsp;</p>
+
+        <p><span style="color: #003366;"><strong> Nuevo Producto : <img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></span></p>
+        <p>&bull; <strong><em> Complete de manera obligatoria los siguientes campos: </em></strong>
+
+        <table><ol><li> Codigo: sera puesto por la escuela para control interno.
+        <br></br><li>Nombre.
+        <br></br><li>Descripci&oacute;n.
+        <br></br><li>Control de Stock.
+        <br></br><li>Precio de Venta : el precio final por el cual sera vendido el producto.
+        <br></br><li>Costo : precio de compra del producto.
+        <br></br><li>IVA : <strong>5%, 10% o Excentas.</strong>
+        <br></br><li>Estado : debe estar <strong>activo</strong> para poder vender o <strong>inactivo</strong> si ya no se desea ver en el listado.
+        <br></br><li>Existencia: debe tener un numero mayor a cero dentro del sistema.
+        </ol></table></p>
+
+        <p>&bull;<strong><em> Y podemos guardar el producto <img src="/static/img/guardar.png" alt="guardar" /></em></strong></p>
+        <p>&bull; <strong><em> Complete de manera opcional el siguiente campo: </em></strong>Foto producto.</p>
+{% endblock %}
