-Termina metodo de pago -Genera deuda cada mes (cron)

--- a/src/escuela/templates/inscripciones-form.html
+++ b/src/escuela/templates/inscripciones-form.html
@@ -162,5 +162,5 @@
             <img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></br></p>
 
         <p><br /><span style="color: #003366;"><strong>Paso 3. Agregar Grupo :&nbsp;Puede elegir de la lista, la misma debe estar creada.</strong></span></p>
-        <p><br /><span style="color: #003366;"><strong>Paso 4. Agregar Alumno :&nbsp;Al guardar el registro, se genera la factura</strong></span></p>
+        <p><br /><span style="color: #003366;"><strong>Paso 4. Agregar Alumno :&nbsp;Al guardar el registro, se genera la deuda</strong></span></p>
 {% endblock %}
