--- a/src/tienda/templates/ventas-form.html
+++ b/src/tienda/templates/ventas-form.html
@@ -32,17 +32,26 @@
                                 <tr>
                                     <th class="" class="numero">Nro</th>
                                     <th class="hidden" class="id">id</th>
-                                    <th class="col-md-1 col-sm-2" class="cantidad">Cantidad</th>
-                                    <th class="col-md-7 col-sm-8" class="producto">Descripcion</th>
-                                    <th class="col-md-1 col-sm-2" class="precio">Precio</th>
-                                    <th class="col-md-1 col-sm-2" class="precio">Exentas</th>
-                                    <th class="col-md-1 col-sm-2" class="precio">5%</th>
-                                    <th class="col-md-1 col-sm-2" class="precio">10%</th>
+                                    <th class="cantidad">Cantidad</th>
+                                    <th class="col-md-6 col-sm-6" class="producto">Descripcion</th>
+                                    <th class="precio">Precio</th>
+                                    <th class="precio">Exentas</th>
+                                    <th class="precio">5%</th>
+                                    <th class="precio">10%</th>
                                 </tr>
                                 </thead>
                                 <tbody id="detalles">
 
                                 </tbody>
+                                <tfoot>
+                                    <tr class="table-row-footer">
+                                        <th colspan="3"></th>
+                                        <th >Subtotal</th>
+                                        <th ><span  id="subtotal-exentas">0</span></th>
+                                        <th ><span id="subtotal-iva-5">0</span></th>
+                                        <th ><span id="subtotal-iva-10">0</span></th>
+                                    </tr>
+                                </tfoot>
                             </table>
 
                         </fieldset>
@@ -53,7 +62,7 @@
                                 <a type="button" class="btn btn-success" data-toggle="modal" data-target="#pago">Pagar</a>
                             </div>
                         </div>
-                        {#    MODAL PAGO                    #}
+                        <!--    MODAL PAGO                    -->
                         <div class="modal fade " id="pago" role="dialog" >
                                 <div class="modal-dialog modal-lg" role="document">
                                     <div class="modal-content">
