Placeholder en campos, para ayuda a usuario.

--- a/src/tienda/templates/facturas-form.html
+++ b/src/tienda/templates/facturas-form.html
@@ -65,7 +65,7 @@
         <br></br><li>Actividad Economica
         <br></br><li>Direcci&oacute;n
         <br></br><li>Tel&eacute;fono
-        <br></br><li>Numero de timbrado : debe ser de 13 digitos <strong>001-001-0000001</strong>
+        <br></br><li>Numero de timbrado : debe ser de 8 digitos. Asegúrese de que este valor sea menor o igual a  <strong>12345678</strong>
         <br></br><li>Punto de Emisi&oacute;n : si la escuela tiene sucursales este numero variar&aacute; <strong>001-001</strong>
         <br></br><li>Nro inicial : los primero numeros que van luego de los primeros 6 digitos  <strong>0000001</strong>
         <br></br><li>Nro final : los ultimos numeros que van luego de los primeros 6 digitos <strong>9999999</strong>
