--- a/src/tienda/templates/ventas-form.html
+++ b/src/tienda/templates/ventas-form.html
@@ -51,6 +51,9 @@
                                         <th ><span id="subtotal-iva-5">0</span></th>
                                         <th ><span id="subtotal-iva-10">0</span></th>
                                     </tr>
+                                    <div id="feedback-detalles" class="feedback-message">
+
+                                    </div>
                                 </tfoot>
                             </table>
 
